# Python-Utilities

./: .gitignore  LICENSE  README.md  conda-environment.yaml  conda-environment.yml  conda_environment.yaml  conda_environment.yml  context_managers.py  latex_maker.py  pyproject.toml
.tests/context_managers/: test_cfiles.py  test_cworking.py
.tests/exceptions/: eiterables.py  enumbers.py  etypes.py  test_eiterables.py  test_enumbers.py  test_etypes.py
.tests/general/: test_gstrings.py
.tests/validation/: test_vgeneral.py  test_vnumbers.py
ancillary_data/linting/: linting.py
ancillary_data/tests/: run_tests.py
context_managers/: cfiles.py  context_managers.py  working.py
exceptions/: eiterables.py  enumbers.py  etypes.py  iterables.py  types.py
general/: gstrings.py
latex_maker/: setup.py
latex_maker/latexmaker/: maker.py
latex_maker/latexmaker/tools/: compile.py
latex_maker/src/: latex_maker.py  maker.py
latex_maker/src/data_files/: configuration.yaml  configuration_types.yaml
latex_maker/src/tools/: compile.py  format.py  save.py  validate.py  validate_parameters.py
latex_maker/src/validate/: validate.py
latexmaker/: setup.py
src/gutilities/context_managers/: cfiles.py  cworking.py
src/gutilities/exceptions/: ecollections.py  edicts.py  enumbers.py  etypes.py
src/gutilities/general/: glinting.py  gstrings.py  gtypes.py  text.txt
src/gutilities/validation/: vcollections.py  vdicts.py  vgeneral.py  vnumbers.py  vstrings.py
src/utilities/context_managers/: cfiles.py  cworking.py
src/utilities/exceptions/: ecollections.py  edicts.py  enumbers.py  etypes.py
tests/auxiliary/: genutils.py
tests/context_managers/: test_cfiles.py  test_cworking.py
tests/exceptions/: test_ecollections.py  test_edicts.py  test_enumbers.py  test_etypes.py
tests/general/: test_gstrings.py
tests/validation/: test_collections.py  test_vdicts.py  test_vgeneral.py  test_vnumbers.py  test_vstrings.py
validation/: general.py  numbers.py  vgeneral.py  vnumbers.py
(+22 files in other folders)
