# This is the installation script for the package utilities. For more
# information on how more parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ------------------------------- Build System ------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ------------------------------ Project Details ----------------------------- #


["project"]
name = "gutilities"
authors = [
    {name= "Andres Garcia Escovar", email = "andrumen1@yahoo.com"}
]
description = "A collection of utilities for projects, to be used as a library/submodule."
readme = "README.md"
requires-python = ">=3.11.8"
keywords = ["utils", "utilities", "library", "submodule"]
license = {text = "MIT"}
dependencies = [
    "flake8==7.3.0",
    "pylint==4.0.5",
]
version = "0.0.1"


# ---------------------------- Packages to Include --------------------------- #


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]


# -------------------------- Pylint Flags to Include ------------------------- #


[tool.pylint]
disable = [
    "duplicate-code"
]
